(executable
  (name landmarks_viewer)
  (js_of_ocaml
     (flags :standard)
  )
  (libraries landmarks gen_js_api js_core)
  (link_flags -no-check-prims)
  (preprocess (pps gen_js_api.ppx))
  (modes js)
)

(install 
  (section lib)
  (package landmarks-viewer)
  (files (landmarks_viewer.bc.js as landmarks_viewer.js)
         (landmarks_viewer.html as landmarks_viewer.html)))
