(executable
  (name landmarks_viewer)
  (libraries landmarks gen_js_api js_core)
  (preprocess (pps gen_js_api.ppx))
  (modes js)
  (js_of_ocaml
    (javascript_files extra_runtime.js)
  )
)

(rule
  (action (copy landmarks_viewer.bc.js landmarks_viewer.js))
  (mode promote)
)

(install
  (section lib)
  (package landmarks-viewer)
  (files (landmarks_viewer.bc.js as landmarks_viewer.js)
         (landmarks_viewer.html as landmarks_viewer.html)))
